docs: Add new package requests, add new values to gitignore.

--- a/test_assignment/.env
+++ b/test_assignment/.env
@@ -2,7 +2,6 @@ MODE=dev
 
 DJANGO_SETTINGS_MODULE=config.settings.${MODE}
 
-
 WSGI_PORT=8000
 LOCAL_PORT=8010
 
@@ -16,3 +15,6 @@ EMAIL_FAIL_SILENTLY=False
 
 RECAPTCHA_PUBLIC_KEY=6LcMBsYpAAAAAKyuXVsZjBkjzgmrPEEL5-6A14P3
 RECAPTCHA_PRIVATE_KEY=6LcMBsYpAAAAAJYtffO-w11XL6qaUM1RO6xsxm91
+
+PAYPAL_CLIENT_ID=AViFM_g_S_EyBgXIsU-k_4QiK8ZWGDcEax1_923d_rG48UOhsPhv8inLaAUUEE-8TverOEUKZneI2DQx
+PAYPAL_SECRET_ID=EAZE7vo9BmxHm-f5SvkIB6Fk0j-StmeWl9Hoqq3StQwDUfzb91kaMU7hZsIQIXm1qu79AaUSs4jjITBR
