--- a/test_assignment/pyproject.toml
+++ b/test_assignment/pyproject.toml
@@ -34,6 +34,7 @@ django-prometheus = "^2.3.1"
 gunicorn = "^23.0.0"
 drf-yasg = "^1.21.7"
 setuptools = "^73.0.1"
+requests = "^2.32.3"
 
 
 [build-system]
