feat: Add library debug tool bar.

--- a/test_assignment/pyproject.toml
+++ b/test_assignment/pyproject.toml
@@ -35,6 +35,7 @@ gunicorn = "^23.0.0"
 drf-yasg = "^1.21.7"
 setuptools = "^73.0.1"
 requests = "^2.32.3"
+django-debug-toolbar = "^4.4.6"
 
 
 [build-system]
