Fix: Correct display in 403, 404, 500, 502, 503 page errors.

--- a/test_assignment/pyproject.toml
+++ b/test_assignment/pyproject.toml
@@ -36,6 +36,7 @@ drf-yasg = "^1.21.7"
 setuptools = "^73.0.1"
 requests = "^2.32.3"
 django-debug-toolbar = "^4.4.6"
+social-auth-app-django = "^5.4.2"
 
 
 [build-system]
