--- a/test_assignment/pyproject.toml
+++ b/test_assignment/pyproject.toml
@@ -37,6 +37,8 @@ setuptools = "^73.0.1"
 requests = "^2.32.3"
 django-debug-toolbar = "^4.4.6"
 social-auth-app-django = "^5.4.2"
+pyotp = "^2.9.0"
+qrcode = "^8.0"
 
 
 [build-system]
